# rubala-rust

./: Cargo.toml  REDME.md
src/: lib.rs  main.rs
src/framework/: mod.rs
src/framework/controller/: mod.rs
src/framework/kernel/: mod.rs
src/framework/request/: mod.rs
src/framework/response/: html_response.rs
src/framework/router/: method.rs  mod.rs  web_route.rs  web_router.rs
src/framework/views/: html_view.rs  mod.rs
src/infrastructure/: mod.rs
src/infrastructure/router/: method.rs  mod.rs  web_route.rs  web_router.rs
src/interfaces/: mod.rs
src/interfaces/http/: mod.rs
src/interfaces/http/controllers/: about_controller.rs  guest_book_controller.rs  home_controller.rs  mod.rs
src/interfaces/http/request/: mod.rs
src/interfaces/http/response/: html_response.rs  mod.rs
src/interfaces/http/views/: html_view.rs  mod.rs
src/templates/: about.html  guest-book.html  home.html  layout.html
tests/integration/framework/router/: mod.rs  web_router_integration_test.rs
