# Rubala
#
# Copyright (c) 2025, Jasper V. Ferrer
#
# This file is part of the Rubala source code.
#
# For licensing information, please see the LICENSE file distributed with this code.
# For inquiries or support, please visit the project's repository at https://github.com/iamhappycoder/rubala.

[package]
name = "rubala"
version = "0.1.0"
edition = "2024"

[dependencies]
fastcgi = { git = "https://github.com/iamhappycoder/rust-fastcgi.git" }
regex = "1.11.1"
once_cell = "1.21.3"
